--- a/Test.html
+++ b/Test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<div class: Men;>
+<div class: text;>
     <h1>My First Heading</h1>
     <p>My first paragraph.</p>    
 </div>
