--- a/Hello.html
+++ b/Hello.html
@@ -11,6 +11,9 @@
 </head>
 <body>
     <div>
+        <img src="https://www.shutterstock.com/image-vector/open-book-vector-clipart-silhouette-260nw-795305758.jpg" alt="book">
+    </div>
+    <div>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, tenetur.
         </p>
