--- a/Assignment 3/Index.html
+++ b/Assignment 3/Index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
@@ -13,6 +14,9 @@
         <li><a href="contact.asp">Contact</a></li>
         <li><a href="about.asp">About</a></li>
     </nav>
+    <script type="module" src="script.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <div>
         <div>
 
