--- a/Assignment 1+2/index.html
+++ b/Assignment 1+2/index.html
@@ -6,22 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="https://cdn.icon-icons.com/icons2/2402/PNG/512/ford_logo_icon_145825.png">
 </head>
 <body>
     <header>
-        <div class="container">
-            <nav class="navbar">
-                <ul class="nav-menu">
-                    <li class="nav-link"><a href="/">Home</a></li>
-                    <li class="nav-link1"><a href="/">About</a> </li>
-                    <li class="nav-link1"><a href="/">Join us</a> </li>
-                    <li class="nav-link1"><a href="/">Whats new</a> </li>
-                </ul>
-            </nav>
-        </div>
-        
-    </header>
+        <nav class="container container_image">
+            <ul class="nav-menu title_wrapper">
+                <li class="nav-img"><a href="/"><img src="https://assets.stickpng.com/images/580b585b2edbce24c47b2c67.png" alt="icon"></a> </li>
+                <li class="nav-link right"><a href="/">Concept Cars</a> </li>
+                <li class= "nav-link right"><a href="/">History</a></li>
+                <li class="nav-link right"><a href="/">Gallery</a> </li>
+                <li class="nav-link right"><a href="/">Home</a> </li>
 
+            </ul>
+        </nav>
+        <div class="frontPageText container">
+            <h1>
+                Ford: The Universal Car.
+            </h1>
+        </div>
+    </header>
     
+    <section>
+        <h2>
+            Lorem ipsum dolor sit amet.
+        </h2>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat minus ad voluptate nisi fugiat soluta id, maxime optio sit dolore?
+        </p>
+    </section>
+
 </body>
 </html>
