--- a/Assignment 1+2/index.html
+++ b/Assignment 1+2/index.html
@@ -9,18 +9,18 @@
     <link rel="icon" href="https://cdn.icon-icons.com/icons2/2402/PNG/512/ford_logo_icon_145825.png">
 </head>
 <body>
-    <header>
+    <header class="index">
         <nav class="container container_image">
             <ul class="nav-menu title_wrapper">
                 <li class="nav-img"><a href="/Assignment%201%2B2/"><img src="https://assets.stickpng.com/images/580b585b2edbce24c47b2c67.png" alt="icon"></a> </li>
                 <li class="nav-link right"><a href="/">Concept Cars</a> </li>
                 <li class= "nav-link right"><a href="/">History</a></li>
-                <li class="nav-link right"><a href="/">Gallery</a> </li>
+                <li class="nav-link right"><a href="/Assignment%201+2/gallery.html">Gallery</a> </li>
                 <li class="nav-link right"><a href="/Assignment%201%2B2/">Home</a> </li>
 
             </ul>
         </nav>
-        <div class="frontPageText container">
+        <div class="frontPageText">
             <h1>
                 Ford: The Universal Car.
             </h1>
@@ -33,6 +33,9 @@
         </h2>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat quidem, exercitationem recusandae perferendis autem deserunt! Exercitationem saepe eaque quos quaerat quas sapiente, suscipit tempore molestiae in facere, corporis perspiciatis, soluta alias. Aspernatur totam praesentium vel minus esse ab pariatur, temporibus tenetur expedita, laborum molestias quod alias, tempora doloremque optio ipsam? Vitae illo nemo velit sequi tenetur laboriosam aspernatur at vero tempore ipsam praesentium accusamus rerum quidem repellat similique asperiores necessitatibus minus optio tempora molestiae, distinctio temporibus excepturi quaerat. Consectetur sed odio magnam ab expedita animi tenetur blanditiis, totam quod assumenda, eaque repellat officiis, ut minima culpa eveniet rerum alias in. Tempora repellat dignissimos voluptatem blanditiis illum! Porro, veniam rerum earum accusantium corporis, eaque voluptatum expedita inventore tenetur perferendis amet incidunt facilis voluptas minima saepe suscipit numquam eius dicta eligendi, alias nulla ipsa deleniti officia? Fuga culpa recusandae possimus voluptas voluptate, cumque dolores ipsam doloremque perspiciatis harum aspernatur excepturi consequuntur architecto ratione porro quaerat, id beatae sint, aut exercitationem. Facilis eos quod fuga, autem, ex natus cumque, error libero maxime eveniet ad optio recusandae at sapiente incidunt voluptates? Vel ipsa aliquam minus molestias ad tempora? Quaerat eos perferendis a non ad dignissimos ex consequuntur? Omnis quo libero, sunt tempora nam tempore?
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat quidem, exercitationem recusandae perferendis autem deserunt! Exercitationem saepe eaque quos quaerat quas sapiente, suscipit tempore molestiae in facere, corporis perspiciatis, soluta alias. Aspernatur totam praesentium vel minus esse ab pariatur, temporibus tenetur expedita, laborum molestias quod alias, tempora doloremque optio ipsam? Vitae illo nemo velit sequi tenetur laboriosam aspernatur at vero tempore ipsam praesentium accusamus rerum quidem repellat similique asperiores necessitatibus minus optio tempora molestiae, distinctio temporibus excepturi quaerat. Consectetur sed odio magnam ab expedita animi tenetur blanditiis, totam quod assumenda, eaque repellat officiis, ut minima culpa eveniet rerum alias in. Tempora repellat dignissimos voluptatem blanditiis illum! Porro, veniam rerum earum accusantium corporis, eaque voluptatum expedita inventore tenetur perferendis amet incidunt facilis voluptas minima saepe suscipit numquam eius dicta eligendi, alias nulla ipsa deleniti officia? Fuga culpa recusandae possimus voluptas voluptate, cumque dolores ipsam doloremque perspiciatis harum aspernatur excepturi consequuntur architecto ratione porro quaerat, id beatae sint, aut exercitationem. Facilis eos quod fuga, autem, ex natus cumque, error libero maxime eveniet 
         </p>
     </section>
 
