changed background color for gallery page

--- a/Assignment 1+2/gallery.html
+++ b/Assignment 1+2/gallery.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Gallery</title>
 </head>
-<body>
+<body class="gallery">
       <nav>
         <ul>
             <li class="nav-img"><a href="/Assignment%201%2B2/"><img src="https://assets.stickpng.com/images/580b585b2edbce24c47b2c67.png" alt="icon"></a> </li>
