--- a/Assignment 1+2/index.html
+++ b/Assignment 1+2/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="https://cdn.icon-icons.com/icons2/2402/PNG/512/ford_logo_icon_145825.png">
 </head>
-<body>
+<body class="home">
     <header class="index">
         <nav class="container container_image">
             <ul class="nav-menu title_wrapper">
