touched up last second code

--- a/Assignment 1+2/gallery.html
+++ b/Assignment 1+2/gallery.html
@@ -11,8 +11,7 @@
       <nav>
         <ul>
             <li class="nav-img"><a href="/Assignment%201%2B2/"><img src="https://assets.stickpng.com/images/580b585b2edbce24c47b2c67.png" alt="icon"></a> </li>
-            <li class="nav-link right"><a href="/">Concept Cars</a> </li>
-            <li class= "nav-link right"><a href="/">History</a></li>
+            <li class= "nav-link right"><a href="/http://127.0.0.1:5500/Assignment%201+2/history.html">History</a></li>
             <li class="nav-link right"><a href="/Assignment%201+2/gallery.html">Gallery</a> </li>
             <li class="nav-link right"><a href="/Assignment%201%2B2/">Home</a> </li>
         </ul>
