--- a/Assignment 1+2/history.html
+++ b/Assignment 1+2/history.html
@@ -7,7 +7,21 @@
     <link rel="stylesheet" href="style.css">
     <title>History</title>
 </head>
-<body>
+<body class="history">
+    <nav class="container container_image">
+        <nav>
+            <ul>
+                <li class="nav-img"><a href="/Assignment%201%2B2/"><img src="https://assets.stickpng.com/images/580b585b2edbce24c47b2c67.png" alt="icon"></a> </li>
+                <li class= "nav-link right"><a href="/http://127.0.0.1:5500/Assignment%201+2/history.html">History</a></li>
+                <li class="nav-link right"><a href="/Assignment%201+2/gallery.html">Gallery</a> </li>
+                <li class="nav-link right"><a href="/Assignment%201%2B2/">Home</a> </li>
+            </ul>
+        </nav>
+    <div class="sectionsHistory">
+        <h2>The Origins</h2>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/1/12/1925_Ford_Model_T_touring.jpg" alt="historycar">
+        <p>Ford Motor Company (commonly known as Ford) is an American multinational automobile manufacturer headquartered in Dearborn, Michigan, United States. It was founded by Henry Ford and incorporated on June 16, 1903.</p>
+    </div>
     
 </body>
 </html>
