created drop down menu

--- a/Assignment 3/index.html
+++ b/Assignment 3/index.html
@@ -1,54 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <nav>
-        <li><a href="default.asp">Home</a></li>
-        <li><a href="news.asp">News</a></li>
-        <li><a href="contact.asp">Contact</a></li>
-        <li><a href="about.asp">About</a></li>
-    </nav>
+    <link rel="stylesheet" href="style.css" />
+    <select id="list" name="Select" onchange="switcher();">
+      <option value="1">One</option>
+      <option value="2">Two</option>
+      <option value="3">Three</option>
+    </select>
+  </head>
+  <body>
     <script type="module" src="script.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
-    <div>
-        <div>
-
-        </div>
-        <div>
-
-        </div>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+    <div class="container">
+      <div id="containertop">
+        <div id="left"></div>
+        <div id="right"></div>
+      </div>
+      <div id="containerbot"></div>
     </div>
-    <div>
-
-    </div>
-    <div>
-        <div>
-            <div>
-
-            </div>
-            <div>
-
-            </div>
-        </div>
-        <div>
-            <div>
-
-            </div>
-            <div>
-
-            </div>
-            <div>
-
-            </div>
-        </div>
-    </div>
-    
-</body>
+  </body>
 </html>
