--- a/Assignment 3/index.html
+++ b/Assignment 3/index.html
@@ -4,23 +4,52 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>TMDB API</title>
     <link rel="stylesheet" href="style.css" />
-    <select id="list" name="Select" onchange="switcher();">
-      <option value="1">One</option>
-      <option value="2">Two</option>
-      <option value="3">Three</option>
-    </select>
+    <script type="module" src="./script.js" , defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+    <div id="pagetop">
+      <select id="list" name="Select">
+        <option value="809">Shrek 2</option>
+        <option value="76600">Avatar: The Way of Water</option>
+        <option value="505642">Black Panther: Wakanda Forever</option>
+        <option value="502356">The Super Mario Bros. Movie</option>
+        <option value="594767">Shazam! Fury of the Gods</option>
+        <option value="60735">The Flash</option>
+        <option value="640146">Ant-Man and the Wasp: Quantumania</option>
+        <option value="378064">A Silent Voice: The Movie</option>
+        <option value="2109">Rush Hour</option>
+        <option value="9502">Kung Fu Panda</option>
+      </select>
+      <button id="getbutton">Get</button>
+    </div>
+
   </head>
   <body>
-    <script type="module" src="script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <div class="container">
       <div id="containertop">
-        <div id="left"></div>
-        <div id="right"></div>
+        <div id="left">
+          <img id="poster" src="">
+        </div>
+        <div id="right">
+          <h1 id="title"></h1>
+          <h3 id="tagline"></h3>
+          <p id="overview"></p>
+        </div>
+        
       </div>
-      <div id="containerbot"></div>
+      <div id="containerbot">
+        <iframe id="trailer"></iframe>
+        <h3 id="status"></h3>
+        <p id="popularity"></p>
+        <p id="voteAverage"></p>
+        <p id="voteCount"></p>
+        <p id="budget"></p>
+      </div>
     </div>
   </body>
 </html>
+
+
+
+
