--- a/Assignment 3/index.html
+++ b/Assignment 3/index.html
@@ -15,7 +15,7 @@
         <option value="505642">Black Panther: Wakanda Forever</option>
         <option value="502356">The Super Mario Bros. Movie</option>
         <option value="594767">Shazam! Fury of the Gods</option>
-        <option value="60735">The Flash</option>
+        <option value="603692">John Wick: Chapter 4</option>
         <option value="640146">Ant-Man and the Wasp: Quantumania</option>
         <option value="378064">A Silent Voice: The Movie</option>
         <option value="2109">Rush Hour</option>
@@ -23,33 +23,27 @@
       </select>
       <button id="getbutton">Get</button>
     </div>
-
   </head>
   <body>
     <div class="container">
       <div id="containertop">
         <div id="left">
-          <img id="poster" src="">
+          <img id="poster" src="" />
         </div>
         <div id="right">
           <h1 id="title"></h1>
           <h3 id="tagline"></h3>
           <p id="overview"></p>
         </div>
-        
       </div>
       <div id="containerbot">
-        <iframe id="trailer"></iframe>
         <h3 id="status"></h3>
         <p id="popularity"></p>
         <p id="voteAverage"></p>
         <p id="voteCount"></p>
         <p id="budget"></p>
       </div>
+      <iframe id="trailer"></iframe>
     </div>
   </body>
 </html>
-
-
-
-
