forgot to commit to github

--- a/Assignment 3/index.html
+++ b/Assignment 3/index.html
@@ -38,6 +38,8 @@
       </div>
       <div id="containerbot">
         <h3 id="status"></h3>
+        <p id="language"></p>
+        <p id="runtime"></p>
         <p id="popularity"></p>
         <p id="voteAverage"></p>
         <p id="voteCount"></p>
